--- a/index.html
+++ b/index.html
@@ -25,24 +25,25 @@
           <li>
             Our page's content, structure, and meaning are all defined using
             HTML (HyperText Markup Language). <br />
-            You don't use it for styling purposes. Instead, use CSS for that!
+            You don't use it for styling purposes. Instead, use CSS for that! <br><br>
           </li>
           <li class="textcolor">
-            HTML uses "elements" to describe (annotate) content <br />
+           <div class="satirbasi">HTML uses "elements" to describe (annotate) content</div>  <br />
           </li>
           <li>
             Typically, HTML elements have an opening tag, content, and a closing
-            tag.
+            tag. <br><br>
+
           </li>
           <li class="textcolor">
-            You can also have void (empty) elements like images
+            <div class="satirbasi">You can also have void (empty) elements like images</div><br>
           </li>
           <li class="textcolor">
-            You can also configure elements with attributes
+            <div class="satirbasi">You can also configure elements with attributes</div> <br>
           </li>
           <li>
             There's a long list of available elements but you'll gain experience
-            over time, no worries.
+            over time, no worries. <br> <br>
           </li>
           <li>
             Learn more about all available HTML elements on
@@ -55,21 +56,21 @@
           <h2 class="class2">CSS Summary</h2>
           <li>
             You can style the content of your page by using CSS (Cascading Style
-            Sheets).
+            Sheets). <br><br>
           </li>
-          <li>To assign styles, use property value pairs.</li>
-          <li>By using the "style" attribute, you can assign styles.</li>
+          <li>To assign styles, use property value pairs.</li><br> 
+          <li>By using the "style" attribute, you can assign styles.</li><br>
           <li class="textcolor">
-            Typically, global styles (such as those provided by the "style"
-            element) are used to prevent code duplication
+            <div class="satirbasi">Typically, global styles (such as those provided by the "style"
+            element) are used to prevent code duplication</div><br>
           </li>
           <li>
             A different option is to use external stylesheet files that you
-            "link" to "
+            "link" to "<br><br>
           </li>
           <li class="textcolor">
-            Understanding terms like "inheritance," "specificity," and "the box
-            model" is essential while dealing with CSS.
+           <div class="satirbasi"> Understanding terms like "inheritance," "specificity," and "the box
+            model" is essential while dealing with CSS.</div><br>
           </li>
           <li>
             Visit the MDN CSS property reference to learn more about all of the
